--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <h1>大会ルールでの計算</h1>
 <body>
     <form method="post" action="https://script.google.com/macros/s/AKfycbz6hpgjlUX8jZsN26BRFlCdceCFpPs4m4AB-tU7dZutQC9u2oie2Jl0rhtkygb2uzMpQg/exec">
-        <p>PERFECT:<input type="text" name="PERFECT"></p>
-        <p>GREAT:<input type="text" name="GREAT"></p>
-        <p>GOOD:<input type="text" name="GOOD"></p>
-        <p>BAD:<input type="text" name="BAD"></p>
-        <p>MISS:<input type="text" name="MISS"></p>
+        <p>PERFECT:<input type="text" name="PERFECT" required></p>
+        <p>GREAT:<input type="text" name="GREAT" required></p>
+        <p>GOOD:<input type="text" name="GOOD" required></p>
+        <p>BAD:<input type="text" name="BAD" required></p>
+        <p>MISS:<input type="text" name="MISS" required></p>
         <p><input type="submit" value="送信する"></p>
         <input type="reset" value="取消する">
     </form>
