--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form method="post" action="https://script.google.com/macros/s/AKfycbz6hpgjlUX8jZsN26BRFlCdceCFpPs4m4AB-tU7dZutQC9u2oie2Jl0rhtkygb2uzMpQg/exec">
         <p>USER NAME:<select name="USER NAME" class="username" required>
             <option value="ユーザー名を選択してください">ユーザー名を選択してください</option>
-            <option value="白い稲妻">白い稲妻</option>
+            <option value="Destino">Destino</option>
             <option value="mona">mona</option>
             <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
