--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <option value="mona">mona</option>
             <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
+            <option value="N/A">N/A</option>
+            <option value="N/A">N/A</option>
+            <option value="N/A">N/A</option>
+            <option value="N/A">N/A</option>
             </select></p>
         <p><img src="./JPG/perfect.jpg" width="100" class="imgap">:<input class="ap" type="number" name="PERFECT" required min="0"></p>
         <p><img src="./JPG/great.jpg" width="100" class="imgap">:<input class="gr" type="number" name="GREAT" required min="0"></p>
