--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <option value="ユーザー名を選択してください">ユーザー名を選択してください</option>
             <option value="Destino">Destino</option>
             <option value="mona">mona</option>
-            <option value="わかな">N/A</option>
+            <option value="わかな">わかな</option>
             <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
