--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
             <option value="ユーザー名を選択してください">ユーザー名を選択してください</option>
             <option value="Destino">Destino</option>
             <option value="mona">mona</option>
-            <option value="わかな">わかな</option>
+            <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
             <option value="N/A">N/A</option>
             </select></p>
+        <p>Title:<input class="title" type="text" name="Title" placeholder="必須ではありません"></p>
         <p><img src="./JPG/perfect.jpg" width="100" class="imgap">:<input class="ap" type="number" name="PERFECT" required min="0"></p>
         <p><img src="./JPG/great.jpg" width="100" class="imgap">:<input class="gr" type="number" name="GREAT" required min="0"></p>
         <p><img src="./JPG/good.jpg" width="100" class="imgap">:<input class="go" type="number" name="GOOD" required min="0"></p>
